; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/mouse/extr_cyapa_gen5.c_cyapa_gen5_guess_electrodes.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/mouse/extr_cyapa_gen5.c_cyapa_gen5_guess_electrodes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cyapa = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cyapa*, i32*, i32*)* @cyapa_gen5_guess_electrodes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cyapa_gen5_guess_electrodes(%struct.cyapa* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.cyapa*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.cyapa* %0, %struct.cyapa** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.cyapa*, %struct.cyapa** %4, align 8
  %8 = getelementptr inbounds %struct.cyapa, %struct.cyapa* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %33

11:                                               ; preds = %3
  %12 = load %struct.cyapa*, %struct.cyapa** %4, align 8
  %13 = getelementptr inbounds %struct.cyapa, %struct.cyapa* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32*, i32** %5, align 8
  store i32 %14, i32* %15, align 4
  %16 = load %struct.cyapa*, %struct.cyapa** %4, align 8
  %17 = getelementptr inbounds %struct.cyapa, %struct.cyapa* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* %19, align 4
  %21 = icmp eq i32 %18, %20
  br i1 %21, label %22, label %26

22:                                               ; preds = %11
  %23 = load %struct.cyapa*, %struct.cyapa** %4, align 8
  %24 = getelementptr inbounds %struct.cyapa, %struct.cyapa* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  br label %30

26:                                               ; preds = %11
  %27 = load %struct.cyapa*, %struct.cyapa** %4, align 8
  %28 = getelementptr inbounds %struct.cyapa, %struct.cyapa* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  br label %30

30:                                               ; preds = %26, %22
  %31 = phi i32 [ %25, %22 ], [ %29, %26 ]
  %32 = load i32*, i32** %6, align 8
  store i32 %31, i32* %32, align 4
  br label %50

33:                                               ; preds = %3
  %34 = load %struct.cyapa*, %struct.cyapa** %4, align 8
  %35 = getelementptr inbounds %struct.cyapa, %struct.cyapa* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.cyapa*, %struct.cyapa** %4, align 8
  %38 = getelementptr inbounds %struct.cyapa, %struct.cyapa* %37, i32 0, i32 2
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @min(i32 %36, i32 %39)
  %41 = load i32*, i32** %6, align 8
  store i32 %40, i32* %41, align 4
  %42 = load %struct.cyapa*, %struct.cyapa** %4, align 8
  %43 = getelementptr inbounds %struct.cyapa, %struct.cyapa* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = load %struct.cyapa*, %struct.cyapa** %4, align 8
  %46 = getelementptr inbounds %struct.cyapa, %struct.cyapa* %45, i32 0, i32 2
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @max(i32 %44, i32 %47)
  %49 = load i32*, i32** %5, align 8
  store i32 %48, i32* %49, align 4
  br label %50

50:                                               ; preds = %33, %30
  ret void
}

declare dso_local i32 @min(i32, i32) #1

declare dso_local i32 @max(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
